# cheat-cli

./: MANIFEST.in  README.md  pyproject.toml
cheat_cli/: cli.py
cheat_cli/data/: commands.csv
